# cardano-address-book

./: CHANGELOG.md  GettingStarted.md  README.md  cabal.project  cardano-address-book.cabal
app/: Main.hs
app/CLI/: BlockfrostApi.hs  Parsers.hs  Query.hs  Run.hs  Types.hs
scripts/: burn-book-beacon.sh  create-book.sh  update-book.sh
src/: CardanoAddressBook.hs
test/: Test.hs
test/Tests/: BeaconTraces.hs
