cabal-version:      2.4
name:               cardano-address-book
version:            0.1.0.0

synopsis: A personal Cardano address book tied to the user's private key.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

library
  import: lang
  exposed-modules: CardanoAddressBook
  build-depends:
    plutus-ledger,
    plutus-ledger-api,
    plutus-core,
    plutus-tx-plugin,
    plutus-tx,
    plutus-script-utils,
    cardano-api,
    bytestring,
    serialise,
    aeson,
    plutonomy,
  hs-source-dirs: src
  ghc-options:
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

test-suite beacon-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise
  other-modules:
    Tests.BeaconTraces
  build-depends:
    cardano-address-book,
    plutus-contract,
    plutus-tx,
    plutus-ledger-api,
    plutus-ledger,
    plutus-ledger-constraints,
    plutus-tx-plugin,
    aeson,
    plutus-script-utils,
    text,
    playground-common,
    containers,
    data-default,
    tasty,
    lens,

executable cardano-address-book
    import: lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      CLI.Parsers,
      CLI.Types,
      CLI.Run,
      CLI.BlockfrostApi,
      CLI.Query

    build-depends:    cardano-address-book,
                      optparse-applicative,
                      containers,
                      aeson,
                      bytestring,
                      aeson-pretty,
                      text,
                      servant,
                      servant-client,
                      http-client-tls,
                      http-client
    hs-source-dirs:   app
    default-language: Haskell2010
